Added Menu options showing many-to-many relationship with cheeses

--- a/src/CheeseMVC/Views/Cheese/Index.cshtml
+++ b/src/CheeseMVC/Views/Cheese/Index.cshtml
@@ -1,15 +1,16 @@
 ﻿@model List<CheeseMVC.Models.Cheese>
+@{
+    ViewBag.Title = "Cheeses";
+}
 
-<h1>@ViewBag.Title</h1>
+<h1>Cheeses</h1>
 
 <table class="table">
-
     <tr>
         <th>Name</th>
         <th>Description</th>
         <td>Category</td>
     </tr>
-
     @foreach (var cheese in Model)
     {
         <tr>
@@ -19,10 +20,8 @@
         </tr>
     }
 </table>
-
 @if (Model.Count == 0)
 {
     <p>No cheeses yet!</p>
 }
-
-<p><a asp-controller="Cheese" asp-action="Add">Add Cheese</a></p>
+<p><a asp-controller="Cheese" asp-action="Add">Add</a> | <a asp-controller="Cheese" asp-action="Remove">Remove</a></p>
